Cacti CHANGELOG

0.8.7g
-bug: Warning in lib/snmp.php caused by misspelled variable
-bug: Use windows-aware shell escaping
-bug#0001747: oid_suffix do not work correctly for data queries input direction 
-bug#0001756: Alternate font styles do not work correctly
-bug#0001763: Adding permissions doesn't work 
-bug#0001757: LDAP realm authentication outputs warning for undefined index
-bug#0001765: Tech support does not work correctly with RRDTool 1.4.x
-bug#0001766: Page refresh setting not being honored
-bug#0001771: "index count changed" not implemented for query_unix_partitions.pl, query_host_partitions.pl, query_cpu_partitions.pl, ss_host_cpu.php and ss_host_disk.php
-bug#0001773: Character encoding problem after upgrade to 0.8.7f
-bug#0001775: Tech support page does account for no memory limit set for PHP 
-bug#0001776: Simultaneous databases connections are not supported 

0.8.7f
-security: SQL injection and shell escaping issues reported by Bonsai Information Security (http://www.bonsai-sec.com)
-security: Cross-site scripting issues reported by VUPEN Security (http://www.vupen.com)
-security: MOPS-2010-023: Cacti Graph Viewer SQL Injection Vulnerability (http://php-security.org)
-bug#0001125: XML parse error on template import with degree symbol 
-bug#0001311: Access denied for graph-only users when accessing index.php directly
-bug#0001366: Exported data templates do not import special characters properly 
-bug#0001416: Graph Export fails with EXPORT FATAL ERROR: Export path /some/path/root/export is within a system path /root. Can not continue. 
-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String" after importing template 
-bug#0001461: Data query export/import fails
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001506: Reindexing fails due to global include issue in lib/snmp.php
-bug#0001522: Special characters break parsing of template data